NetBSD Problem Report #48287

From t-hash@abox3.so-net.ne.jp  Mon Oct  7 19:33:55 2013
Return-Path: <t-hash@abox3.so-net.ne.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E1D7172157
	for <gnats-bugs@gnats.NetBSD.org>; Mon,  7 Oct 2013 19:33:55 +0000 (UTC)
Message-Id: <201310071933.r97JXncR020782@ms-omx11.plus.so-net.ne.jp>
Date: Tue, 08 Oct 2013 04:33:49 +0900
From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
Reply-To:
To: gnats-bugs@gnats.NetBSD.org
Subject: panic when attaching vcaudio on raspberry pi

>Number:         48287
>Category:       port-evbarm
>Synopsis:       panic when attaching vcaudio on raspberry pi
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    skrll
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Oct 07 19:35:01 +0000 2013
>Closed-Date:    Sun Oct 13 15:29:57 +0000 2013
>Last-Modified:  Sun Oct 13 15:29:57 +0000 2013
>Originator:     Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
>Release:        NetBSD 6.99.24
>Organization:
>Environment:
System: NetBSD rpi 6.99.24 NetBSD 6.99.24 (MYRPI) #13: Mon Oct  7 16:00:16 JST 2013  root@halt:/usr/build2/obj.evbarm/sys/arch/evbarm/compile/MYRPI evbarm
Architecture: arm
Machine: evbarm
>Description:
	Kernel panics when attaching vcaudio at boot on Raspberry Pi.

	The vchiq code uses curlwp pointer as client_id instead of pid,
	then client_id is now expressed as 11 digits in signed decimal
	(e.g. -1045735424 in my rpi).
	In function vchiq_use_internal() this client_id is sprintf'ed
	into slightly short buffer. The buffer is enough large to put
	5 digits pid number but is not for 11 digits lwp pointer.
	This may break other variable on stack.

>How-To-Repeat:
	install recent (after 2013.09.19.15.13.43) kernel.img and boot
>Fix:
	In functions vchiq_use_internal and vchiq_release_internal
	- enlarge buffer entity[] enough to store whole strings
	- use snprintf


>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: gnats-admin->port-evbarm-maintainer
Responsible-Changed-By: dholland@NetBSD.org
Responsible-Changed-When: Sat, 12 Oct 2013 17:46:55 +0000
Responsible-Changed-Why:
came in as "port-ebvarm" instead of "port-evbarm" so gnats got confused


From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: port-evbarm-maintainer@netbsd.org, gnats-admin@netbsd.org,
        netbsd-bugs@netbsd.org, dholland@NetBSD.org
Subject: Re: port-evbarm/48287 (panic when attaching vcaudio on raspberry pi)
Date: Sun, 13 Oct 2013 04:26:39 +0900

 On Sat, 12 Oct 2013 17:46:56 +0000 (UTC)
 dholland@NetBSD.org wrote:

 > Synopsis: panic when attaching vcaudio on raspberry pi
 > 
 > Responsible-Changed-From-To: gnats-admin->port-evbarm-maintainer
 > Responsible-Changed-By: dholland@NetBSD.org
 > Responsible-Changed-When: Sat, 12 Oct 2013 17:46:55 +0000
 > Responsible-Changed-Why:
 > came in as "port-ebvarm" instead of "port-evbarm" so gnats got confused

 oh... I'm sorry.
 Thank you for pointing out and fixing.

 Please see http://gnats.netbsd.org/48287 about whole PR.

 --
 t-hash

Responsible-Changed-From-To: port-evbarm-maintainer->skrll
Responsible-Changed-By: skrll@NetBSD.org
Responsible-Changed-When: Sun, 13 Oct 2013 07:03:33 +0000
Responsible-Changed-Why:
Take


From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48287 CVS commit: src/sys/external/bsd/vchiq/dist/interface/vchiq_arm
Date: Sun, 13 Oct 2013 07:46:26 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sun Oct 13 07:46:26 UTC 2013

 Modified Files:
 	src/sys/external/bsd/vchiq/dist/interface/vchiq_arm: vchiq_arm.c
 	    vchiq_core.c

 Log Message:
 Print the client_id (lwp address) as hex and avoid stack overflow. Use
 snprintf while here.

 Fixes PR/48287


 To generate a diff of this commit:
 cvs rdiff -u -r1.6 -r1.7 \
     src/sys/external/bsd/vchiq/dist/interface/vchiq_arm/vchiq_arm.c
 cvs rdiff -u -r1.5 -r1.6 \
     src/sys/external/bsd/vchiq/dist/interface/vchiq_arm/vchiq_core.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 13 Oct 2013 10:19:28 +0000
State-Changed-Why:
I've committed a fix. OK to close?


From: Takahiro HAYASHI <t-hash@abox3.so-net.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: skrll@NetBSD.org, netbsd-bugs@netbsd.org, gnats-admin@netbsd.org
Subject: Re: port-evbarm/48287 (panic when attaching vcaudio on raspberry pi)
Date: Sun, 13 Oct 2013 19:59:32 +0900

 On Sun, 13 Oct 2013 10:19:28 +0000 (UTC)
 skrll@NetBSD.org wrote:

 > Synopsis: panic when attaching vcaudio on raspberry pi
 > 
 > State-Changed-From-To: open->feedback
 > State-Changed-By: skrll@NetBSD.org
 > State-Changed-When: Sun, 13 Oct 2013 10:19:28 +0000
 > State-Changed-Why:
 > I've committed a fix. OK to close?

 Yes, thank you for fix.

 --
 t-hash

State-Changed-From-To: feedback->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 13 Oct 2013 15:29:57 +0000
State-Changed-Why:
Confirmed fixed. Thanks for the PR.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.