Print the client_id (lwp address) as hex and avoid stack overflow. Use snprintf while here.

Fixes PR/48287